--- a/screen.css
+++ b/screen.css
@@ -3,3 +3,16 @@ a.active {
     font-weight: bold;
 }
 
+html {
+    background: #222
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #e3e3e3;
+}
+
+img {
+    width: 400px;
+    height: auto;
+}
